--- a/tribute.html
+++ b/tribute.html
@@ -3,6 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather">
+	<link rel="stylesheet" href="tribute.css">
 	<title>David Foster Wallace</title>
 </head>
 <body>
